back-office/backOffice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-office-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: starbucks
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: starbucks
    spec:
      containers:
      - name: starbucks
        image: suryaram14/starbucks
        ports:
        - containerPort: 8080
