back-office/backOffice-ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "back-office-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "back-office-service"
    servicePort: 8080
