back-office/kong-ingress-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: starbucks-kong-ingress-rule
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: spring-starbucks-api-service
          servicePort: 80
